Version History
===============

2.0:

- rewrite for Elgg 1.9

1.0.1 (2013-04-05):

- fixed: wrong container_guid in some cases
- fixed: last pages revision is correctly updated now
- updated: better success/error messages to the user

1.0 (2012-08-07):

- first release